Agregando formulario para dispositivos de entrada y estilos del mismo

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,18 @@
     <title>WebPack Inicial</title>
   </head>
   <body>
-    <!--  -->
-    <!--  -->
-    <!--  -->
+    <form id="form-dispositivo">
+      <label>Tipo de entrada</label>
+      <input
+        type="text"
+        id="tipo-entrada"
+        placeholder="Tipo de entrada"
+        required
+      />
+      <label>Marca</label>
+      <input type="text" id="marca" placeholder="Marca" required />
+      <button type="submit">Agregar Teclado</button>
+      <button type="submit">Agrega Raton</button>
+    </form>
   </body>
 </html>
