Terminacion de formularios y campos para almacenar dispositivos de entrada

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,16 @@
       />
       <label>Marca</label>
       <input type="text" id="marca" placeholder="Marca" required />
-      <button type="submit">Agregar Teclado</button>
-      <button type="submit">Agrega Raton</button>
+      <button type="submit" id="teclado">Agregar Teclado</button>
+      <button type="submit" id="raton">Agrega Raton</button>
     </form>
+    <div id="teclados">
+      <h2>Teclados</h2>
+      <li>Id teclado 1, Entrada: USB, Marac: Asus</li>
+    </div>
+    <div id="ratones">
+      <h2>Ratones</h2>
+      <li>Id Raton 12, Entrada: USB, Marac: Asus</li>
+    </div>
   </body>
 </html>
